# ChulkHarness

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  environment.yml  pyproject.toml
.chulk/: mcp.json
agent/: agent.py  config.py  llm_client.py  main.py  memory.py  prompts.py  shell_tool.py  skill_registry.py  tool_registry.py
agent/tests/: __init__.py
chulk/: __init__.py  api.py  config.py  main.py  runtime.py
chulk/cli/: __init__.py  commands.py  progress.py  terminal.py
chulk/core/: __init__.py  actions.py  agent.py  context.py  events.py  observations.py  prompt_builder.py  prompts.py  reflection.py  state.py  trace_format.py
chulk/llm/: __init__.py  base.py  capabilities.py  client.py  factory.py  messages.py  pricing.py  public.py  tools.py  usage.py
chulk/mcp/: __init__.py  bridge.py  config.py
chulk/memory/: __init__.py  constants.py  extraction.py  markdown.py  retrieval.py  sqlite_store.py  store.py
chulk/presets/: AGENT.md  __init__.py  software_engineer.py
chulk/sessions/: __init__.py  models.py  recorder.py  sqlite_store.py
chulk/skills/: __init__.py  registry.py
chulk/tests/: test_actions.py  test_agent.py  test_cli_history.py  test_main.py  (+11 more)
examples/: 01_basic_agent.py  02_agent_config.py  03_builtin_tools.py  04_custom_tool.py  05_tool_permissions.py  06_streaming_and_events.py  07_structured_run_result.py  08_plan_approval.py  09_async_agent.py  10_mcp_programmatic.py  11_software_engineer_preset.py  12_local_provider.py  13_per_agent_skills.py  README.md  bootstrap.py  common.py
src/: __init__.py  config.py  main.py
(+81 files in other folders)
